# ArchEval

./: .gitignore  LICENSE  images.yaml  pyproject.toml  run.example.yaml  site.env.example  site.example.yaml
archbench/: __init__.py  cli.py
evaluators/: __init__.py
scripts/: build_base_save.sh  build_l2_save.sh  build_l2agent_image.sh  build_l2agent_image_codex.sh  build_sim_image.sh  exp_disk_guard.sh  gen_workspace_manifest.py  inject_tier_cards.py  judge_smoke.py  l2agent_strip_overlay.sh  lib.sh  load_sim_image.sh  neutrality_audit.sh  smoke_all_connectors.sh  smoke_test.sh  stamp_cards.sh  verify_workspace.py
tests/: conftest.py  test_anonymizer.py  test_architecture_invariants.py  test_baseline_tier_guard.py  test_cache_replacement.py  test_challenge.py  test_champsim_integration.py  test_champsim_plugin.py  test_connectors_smoke.py  test_container.py  test_docker_image_identity.py  test_engine.py  test_env_file.py  test_evaluators.py  test_gibbon_tier_fixes.py  test_image_plan.py  test_images_cli.py  test_images_manifest.py  test_imports.py  test_mcp_handlers.py  test_multi_sim_session.py  test_no_cluster_paths.py  test_openai_compat_backend.py  test_outcome_anonymization.py  test_outcomes.py  test_p5_smoke.py  test_prediction_calibration.py  test_prompt_builder.py  test_provenance.py  test_proxy.py  test_proxy_integration.py  test_run_profile.py  test_runtimes.py  test_session_provenance.py  test_simulator_metric_best_feasible.py  test_site.py  test_starter_staging_v3.py  test_stock_lru_equivalence.py  test_tier_behavior.py  test_tier_process_evaluators.py  (+2 more)
(+224 files in other folders)
